css/style.css
/* ... */
.section-container {
  flex: 1;
  position: relative;
}
.section-container > section {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
}
.section-sauce ul,
.section-rice ul {
  list-style: none;
  margin: 0;
  padding: 8px;
}
.section-sauce li,
.section-rice li {
  padding-left: 4px;
}
.section-main label {
  text-decoration: underline;
}
.section-filter ul,
.section-qr ul {
  padding: 0;
}
.section-filter li,
.section-qr li {
  margin: 10px 40px;
}
.section-filter textarea {
  height: 500px;
}
.section-qr textarea {
  height: 200px;
}
.section-sauce textarea {
  height: 350px;
}
.section-rice .field[name="boardnav"] {
  width: 100%;
}
.section-rice textarea {
  height: 150px;
}
.section-archives table {
  width: 100%;
}
.section-archives th:not(:first-child) {
  width: 30%;
}
.section-archives td {
  text-align: center;
}
.section-archives select {
  width: 90%;
}
.section-keybinds .field {
  font-family: monospace;
}
#fourchanx-settings fieldset {
  border: 1px solid;
  border-radius: 3px;
}
#fourchanx-settings legend {
  font-weight: 700;
}
#fourchanx-settings textarea {
  font-family: monospace;
  min-width: 100%;
  max-width: 100%;
}
#fourchanx-settings code {
  color: #000;
  background-color: #FFF;
  padding: 0 2px;
}
.unscroll {
  overflow: hidden;
}

/* Index */
:root.index-loading .navLinks,
:root.index-loading .board,
:root.index-loading .pagelist {
  display: none;
}
#index-search {
  padding-right: 1.5em;
  width: 100px;
  transition: color .25s, border-color .25s, width .25s;
}
#index-search:focus,
#index-search[data-searching] {
  width: 200px;
}
#index-search-clear {
  color: gray;
  margin-left: -1.25em;
}
<% if (type === 'crx') { %>
/* ``::-webkit-*'' selectors break selector lists on Firefox. */
#index-search::-webkit-search-cancel-button,
<% } %>
#index-search:not([data-searching]) + #index-search-clear {
  display: none;
}
.summary {
  text-decoration: none;
}
.catalog-mode {
  text-align: center;
}
.catalog-thread {
  display: inline-flex;
  text-align: left;
  flex-direction: column;
  align-items: center;
  width: 165px;
  margin: 0 2px 5px;
  max-height: 320px;
  word-break: break-word;
}
.thumb {
  flex-shrink: 0;
  position: relative;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 2px;
  box-shadow: 0 0 5px rgba(0, 0, 0, .25);
}
.thumb.spoiler-file {
  background-size: 100px;
  width: 100px;
  height: 100px;
}
.thumb.deleted-file {
  background-size: 127px 13px;
  width: 127px;
  height: 13px;
  padding: 20px 11px;
}
.thumb.no-file {
  background-size: 77px 13px;
  width: 77px;
  height: 13px;
  padding: 20px 36px;
}
.thread-icons > img {
  width: 1em;
  height: 1em;
  margin: 0;
  vertical-align: text-top;
}
.thumb:not(:hover) > .menu-button:not(.open) > i {
  display: none;
}
.thumb > .menu-button {
  position: absolute;
  top: 0;
  right: 0;
}
.thumb > .menu-button > i {
  width: 1em;
  height: 1em;
  padding: 1px;
  border-radius: 0 2px 0 2px;
  font-size: 14px;
  text-align: center;
}
.thread-stats {
  flex-shrink: 0;
  cursor: help;
  font-size: 10px;
  font-weight: 700;
  margin-top: 2px;
}
.catalog-thread > .subject {
  flex-shrink: 0;
  font-weight: 700;
  line-height: 1;
  text-align: center;
}
.catalog-thread > .comment {
  flex-shrink: 1;
  align-self: stretch;
  overflow: hidden;
  text-align: center;
}

/* Announcement Hiding */
:root.hide-announcement #globalMessage,
:root.hide-announcement-enabled #toggleMsgBtn {
  display: none;
}
a.hide-announcement {
  float: left;
}

/* Unread */
#unread-line {
  margin: 0;
}

/* Thread Updater */
#updater:not(:hover) {
  background: none;
  border: none;
  box-shadow: none;
}
#updater > .move {
  padding: 0 3px;
}
#updater > div:last-child {
  text-align: center;
}
#updater input[type=number] {
  width: 4em;
}
#updater:not(:hover) > div:not(.move) {
  display: none;
}
#updater input[type="button"] {
  width: 100%;
}
.new {
  color: limegreen;
}

/* Thread Watcher */
#thread-watcher {
  max-width: 200px;
  min-width: 150px;
  padding: 3px;
  position: absolute;
}
#thread-watcher > div:first-child {
  display: flex;
  align-items: center;
}
#thread-watcher .move {
  flex: 1;
}
#watcher-status:not(:empty)::before {
  content: "(";
}
#watcher-status:not(:empty)::after {
  content: ")";
}
#watched-threads:not(:hover) {
  max-height: 150px;
  overflow: hidden;
}
#watched-threads div {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
#watched-threads .current {
  font-weight: 700;
}
#watched-threads a {
  text-decoration: none;
}
#watched-threads .dead-thread a[title] {
  text-decoration: line-through;
}

/* Thread Stats */
#thread-stats {
  background: none;
  border: none;
  box-shadow: none;
}

/* Quote */
.deadlink {
  text-decoration: none !important;
}
.backlink.deadlink:not(.forwardlink),
.quotelink.deadlink:not(.forwardlink) {
  text-decoration: underline !important;
}
.inlined {
  opacity: .5;
}
#qp input, .forwarded {
  display: none;
}
.quotelink.forwardlink,
.backlink.forwardlink {
  text-decoration: none;
  border-bottom: 1px dashed;
}
@supports (text-decoration-style: dashed) or (-moz-text-decoration-style: dashed) {
  .quotelink.forwardlink,
  .backlink.forwardlink {
    text-decoration: underline;
    -moz-text-decoration-style: dashed;
    text-decoration-style: dashed;
    border-bottom: none;
  }
}
.filtered {
  text-decoration: underline line-through;
}
.inline {
  border: 1px solid;
  display: table;
  margin: 2px 0;
}
.inline .post {
  border: 0 !important;
  background-color: transparent !important;
  display: table !important;
  margin: 0 !important;
  padding: 1px 2px !important;
}
#qp > .opContainer::after {
  content: '';
  clear: both;
  display: table;
}
#qp .post {
  border: none;
  margin: 0;
  padding: 2px 2px 5px;
}
#qp img {
  max-height: 80vh;
  max-width: 50vw;
}
.qphl {
  outline: 2px solid rgba(216, 94, 49, .7);
}
/* ... */

